# xwdata

./: .gitignore  MANIFEST.in  MIGRAT_FEATURE_VERIFICATION.md  README.md  benchmark_ultra_fast_formats.py  benchmark_v8_comparison.py  install_dependencies.py  pyproject.toml  pyproject.xwdata.toml  pytest.ini  requirements.txt
.github/: workflows-config.yaml
.github/workflows/: publish.yml
benchmarks/: INDEX.md  comprehensive_benchmarks.py  diagnose_navigation.py  performance_comparison.py  standardized_benchmarks.py
benchmarks/20260209-benchmark comprehensive/benchmarks/: BENCH_20251028_COMPREHENSIVE_SUMMARY.md  INDEX.md
benchmarks/20260209-benchmark comprehensive/scripts/: benchmark_ultra_fast_formats.py  comprehensive_benchmarks.py  diagnose_navigation.py  performance_comparison.py  standardized_benchmarks.py
docs/: ARCHITECTURE.md  COMPREHENSIVE_BENCHMARKS.md  ECOSYSTEM_INTEGRATION_GUIDE.md  GET_STARTED.md  GUIDE_01_USAGE.md  INDEX.md  MIGRATION_FROM_MIGRAT.md  NAVIGATION_CACHING_BREAKTHROUGH.md  PERFORMANCE_RESULTS.md  PIPELINE_OPTIMIZATION_PLAN.md  PROJECT_PHASES.md  QUICK_REFERENCE.md  READY_TO_USE.md  REF_01_REQ.md  REF_11_COMP.md  REF_12_IDEA.md  REF_13_ARCH.md  REF_14_DX.md  REF_15_API.md  REF_21_PLAN.md  REF_22_PROJECT.md  REF_35_REVIEW.md  REF_51_TEST.md  REF_54_BENCH.md  STANDARDIZED_BENCHMARKS.md  V7_MULTI_FORMAT_PERFORMANCE.md  V8_FORMAT_AGNOSTIC_FEATURES.md  test_data.md
docs/_archive/: PHASE_6_XWDATA_ANALYSIS.md  README.md  XWDATA_XWQUERY_INTEGRATION_COMPLETE.md
docs/changes/: CHANGE_20250126_BCRYPT_WORKAROUND.md  CHANGE_20251026_XWDATA_XWQUERY_INTEGRATION.md  CHANGE_20260207_DOCS_ROOT_STANDARD.md  COMPLETE_INLINE_COMPARISON.md  COMPLETE_PERFORMANCE_ANALYSIS.md  COMPLETE_VERSION_COMPARISON.md  IMPLEMENTATION_COMPLETE.md  PERFORMANCE_EVOLUTION_COMPLETE.md  REF_REFRESH_20260207.md  SESSION_COMPLETE_SUMMARY.md  TESTS_AND_BENCHMARKS_COMPLETE.md  V7_IMPLEMENTATION_COMPLETE.md  V8_IMPLEMENTATION_COMPLETE.md  XWDATA_SUBSCRIPTABLE_IMPLEMENTATION_COMPLETE.md
docs/logs/: 3WAY_PERFORMANCE_COMPARISON.md  AGENT_BRIEF_XWDATA.md  ARCHIVE_VALUE_CAPTURE_XWDATA.md  CACHE_IMPLEMENTATION_REPORT.md  COMPREHENSIVE_COMPARISON.md  COW_FIXED_FINAL_REPORT.md  EVOLUTION_SUMMARY.md  FEATURE_COMPARISON.md  FINAL_PERFORMANCE_COMPARISON.md  FINAL_PERFORMANCE_REPORT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LAZY_LIVE_PROFILES_SUMMARY.md  MASTER_COMPARISON_ALL_VERSIONS.md  OPTIMIZATION_SUMMARY.md  STATUS_REPORT.md  V7_VS_V6_COMPARISON.md  V8_FINAL_SUMMARY.md
docs/logs/benchmarks/: INDEX.md  MOVED_TO_ROOT.md
docs/logs/reviews/: PROPOSED_ACTIONS_XWDATA_GAP.md  REVIEW_20251104_PHASE6_XWDATA_FORMAT_STRATEGIES.md  REVIEW_20260207_120000_000_XWDATA_GAP_DOCS_CODE_TESTS_EXAMPLES_BENCHMARKS.md  REVIEW_20260207_163000_000_REQUIREMENTS.md  REVIEW_20260207_PROJECT_STATUS.md
docs/logs/tests/: TEST_20250126_XWDATA_COVERAGE.md
examples/: README.md  __init__.py  basic_usage.py
examples/chatdb_bigfile/: .gitignore  ENCODER_CACHE_COMPARISON.md  ENCODER_COMPARISON.md  FINAL_INDEX_CACHE_SUMMARY.md  INDEX_CACHE_5GB_TEST_PLAN.md  INDEX_CACHE_BENCHMARK_RESULTS.md  INDEX_CACHE_COMPARISON.md  INDEX_CACHE_FINAL_RESULTS.md  INDEX_CACHE_TEST_RESULTS.md  JSON_DB_BENCH.md  XWJSON_COMPLETE_COMPARISON.md  __init__.py
examples/chatdb_bigfile/operations/: OPTIMIZATIONS_README.md  __init__.py  atomic_update_append_log.py  benchmark_all_improvements.py  benchmark_all_parsers.py  benchmark_apple_to_apple.py  benchmark_atomic_fast.py  benchmark_atomic_updates.py  benchmark_baseline.py  benchmark_complete.py  benchmark_comprehensive_comparison.py  benchmark_encoder_cache.py  benchmark_encoder_cache_comparison.py  benchmark_encoder_comparison.py  benchmark_full_comparison.py  benchmark_full_featured.py  benchmark_index_cache.py  benchmark_index_parallel.py  benchmark_main_codebase.py  benchmark_optimized.py  benchmark_parallel_only.py  benchmark_read_write.py  benchmark_xwjson.py  benchmark_xwjson_comparison.py  benchmark_xwjson_throughput.py  build_index.py  build_index_parallel.py  cache.py  check_5gb_progress.py  check_library_sizes.py  config.py  convert_to_xwjson.py  db_io.py  demo_atomic.py  demo_lazy.py  demo_paging.py  demo_query.py  demo_refs.py  demo_xwjson.py  generate_5gb_xwjson.py  (+5 more)
examples/chatdb_bigfile/schemas/: channel.schema.json  group.schema.json  message.schema.json  reaction.schema.json  record.schema.json  ref.schema.json  user.schema.json
scripts/: check_coverage.py  run_performance_benchmarks.py
src/: xdata.py  xwdata.py
src/exonware/: __init__.py
src/exonware/xdata/: __init__.py  version.py
src/exonware/xwdata/: __init__.py  base.py  builder.py  config.py  contracts.py  defs.py  errors.py  facade.py  shortcuts.py  version.py
tests/: __init__.py  conftest.py  runner.py  verify_installation.py
tests/0.core/: __init__.py  benchmark_lazy_proxy.py  conftest.py  runner.py  simple_benchmark.py  test_core_as_methods.py  test_core_baas_facade.py  test_core_detection.py  test_core_ecosystem_integration.py  test_core_format_conversion.py  test_core_indexing.py  test_core_lazy.py  test_core_lazy_proxy_performance.py  test_core_lazy_xwdata_integration.py  test_core_load_save.py  test_core_query.py  test_core_query_integration.py  test_core_references.py  test_core_roundtrip.py  test_xwdata_xwquery_integration.py
tests/1.unit/: __init__.py  conftest.py  runner.py  test_error_handling.py  test_xdata.py
tests/1.unit/builder_tests/: __init__.py  test_builder_metadata_config.py
tests/2.integration/: __init__.py  conftest.py  runner.py  test_async_sync_patterns.py  test_entity_integration.py  test_example_basic_usage.py  test_format_conversion.py  test_format_conversion_comprehensive.py  test_reference_resolution.py  test_schema_integration.py  test_storage_integration.py  test_xwnode_delegation.py
tests/3.advance/: __init__.py  runner.py  test_performance.py  test_performance_conversion.py  test_security.py
tests/core/: conftest.py  runner.py  test_core.py
tests/integration/: __init__.py  runner.py
tests/unit/: __init__.py  runner.py
(+93 files in other folders)
