# project-src-size=514480 ; 0.49 MB

# Source size (src/*): ~501.3 KB
[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[project]
  name = "exonware-xwdata"
  dynamic = ["version"]
  description = "Advanced data manipulation with XWNode integration, async operations, and universal format conversion"
  readme = "README.md"
  requires-python = ">=3.12"
  keywords = ["data", "manipulation", "processing", "transformation", "analysis", "exonware"]
  classifiers = []
  dependencies = [
    "exonware-xwnode",  # file-size=2537098 ; 2.42 MB
    "exonware-xwquery",  # file-size=1631984 ; 1.56 MB
    # total = src + deps ; 4.47 MB
  ]
  authors = [
    { name = "eXonware Backend Team", email = "connect@exonware.com" },
  ]

  [project.license]
    text = "MIT"

  [project.optional-dependencies]
    dev = [
      "black>=23.0.0",  # file-size=3914855 ; 3.73 MB
      "exonware-xwlazy",  # file-size=349706 ; 0.33 MB
      "exonware-xwnode[dev]",  # file-size=81044439 ; 77.29 MB
      "exonware-xwquery[dev]",  # file-size=78118912 ; 74.50 MB
      "isort>=5.12.0",  # file-size=568232 ; 0.54 MB
      "mypy>=1.0.0",  # file-size=29775254 ; 28.40 MB
      "pytest>=7.0.0",  # file-size=3152415 ; 3.01 MB
      "pytest-asyncio>=0.21.0",  # file-size=46752 ; 0.04 MB
      "pytest-cov>=4.0.0",  # file-size=71639 ; 0.07 MB
      # total = src + deps ; 188.40 MB
    ]
    lazy = [
      "exonware-xwlazy",  # file-size=349706 ; 0.33 MB
      "exonware-xwnode[lazy]",  # file-size=5987368 ; 5.71 MB
      "exonware-xwquery[lazy]",  # file-size=3061841 ; 2.92 MB
      # total = src + deps ; 9.45 MB
    ]
    full = [
      "aiofiles",  # file-size=81991 ; 0.08 MB
      "attrs",  # file-size=440438 ; 0.42 MB
      "bcrypt>=4.0.0",  # file-size=329770 ; 0.31 MB
      "brotli",  # file-size=868889 ; 0.83 MB
      "cachebox",  # file-size=971831 ; 0.93 MB
      "cachetools",  # file-size=105183 ; 0.10 MB
      "cbor2",  # file-size=406858 ; 0.39 MB
      "cryptography",  # file-size=10265860 ; 9.79 MB
      "dicttoxml",  # file-size=96721 ; 0.09 MB
      "exonware-xwnode[full]",  # file-size=88153784 ; 84.07 MB
      "exonware-xwquery[full]",  # file-size=510425825 ; 486.78 MB
      "httpx",  # file-size=765633 ; 0.73 MB
      "hyperlight_hyperjson",  # file-size=261754 ; 0.25 MB
      "json5",  # file-size=377396 ; 0.36 MB
      "msgpack",  # file-size=238387 ; 0.23 MB
      "msgspec",  # file-size=525449 ; 0.50 MB
      "opentelemetry-api",  # file-size=423339 ; 0.40 MB
      "orjson",  # file-size=289443 ; 0.28 MB
      "psutil",  # file-size=2104166 ; 2.01 MB
      "pylru",  # file-size=74244 ; 0.07 MB
      "pymongo",  # file-size=6208897 ; 5.92 MB
      "PyYAML",  # file-size=730195 ; 0.70 MB
      "rich",  # file-size=2130726 ; 2.03 MB
      "tomli-w",  # file-size=25350 ; 0.02 MB
      "xmltodict",  # file-size=65213 ; 0.06 MB
      "zstandard",  # file-size=1384115 ; 1.32 MB
      # total = src + deps ; 599.16 MB
    ]

  [project.urls]
    Homepage = "https://exonware.com"
    Repository = "https://github.com/exonware/xdata"
    Documentation = "https://github.com/exonware/xdata#readme"

[tool]

  [tool.black]
    line-length = 88
    target-version = ["py38"]

  [tool.isort]
    profile = "black"
    line_length = 88

  [tool.mypy]
    python_version = "0.9.0.1"
    strict = true
    warn_return_any = true
    warn_unused_configs = true
    disallow_untyped_defs = true
    disallow_any_generics = true
    disallow_untyped_calls = true
    disallow_incomplete_defs = true
    check_untyped_defs = true
    disallow_untyped_decorators = true
    no_implicit_optional = true
    warn_redundant_casts = true
    warn_unused_ignores = true
    warn_no_return = true
    warn_unreachable = true

  [tool.pytest]

    [tool.pytest.ini_options]
      testpaths = ["tests"]
      python_files = ["test_*.py"]
      python_classes = ["Test*"]
      python_functions = ["test_*"]
      asyncio_mode = "auto"
      addopts = "-v --tb=short -x --strict-markers"
      markers = []

  [tool.hatch]

    [tool.hatch.version]
      path = "src/exonware/xwdata/version.py"

    [tool.hatch.build]

      [tool.hatch.build.targets]

        [tool.hatch.build.targets.wheel]
          packages = ["src/exonware"]
          py-modules = ["src/xdata"]

        [tool.hatch.build.targets.sdist]
          include = ["/src", "/tests", "/README.md", "/.github"]
