# Source size (src/*): ~500.5 KB
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exonware-xwdata"
dynamic = ["version"]
description = "Advanced data manipulation with XWNode integration, async operations, and universal format conversion"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["data", "manipulation", "processing", "transformation", "analysis", "exonware"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[[project.authors]]
name = "eXonware Backend Team"
email = "connect@exonware.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [
  "black>=23.0.0",
  "exonware-xwlazy",
  "exonware-xwnode[dev]",
  "exonware-xwquery[dev]",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
]
lazy = [
  "exonware-xwnode[lazy]",
  "exonware-xwquery[lazy]",
]
full = [
  "aiofiles",
  "attrs",
  "bcrypt>=4.0.0",
  "brotli",
  "cachebox",
  "cachetools",
  "cbor2",
  "charset-normalizer",
  "cloudpickle",
  "cryptography",
  "cython",
  "dicttoxml",
  "exonware-xwnode[full]",
  "exonware-xwquery[full]",
  "httpx",
  "hyperlight_hyperjson",
  "json5",
  "lz4",
  "msgpack",
  "msgspec",
  "numpy",
  "numexpr",
  "opentelemetry-api",
  "orjson",
  "pandas",
  "psutil",
  "pylru",
  "pymongo",
  "PyYAML",
  "pyarrow",
  "pytz",
  "rich",
  "scikit-learn",
  "tomli",
  "tomli-w",
  "uarray",
  "xmltodict",
  "zstandard",
]

[project.urls]
Homepage = "https://exonware.com"
Repository = "https://github.com/exonware/xwdata"
Documentation = "https://github.com/exonware/xwdata#readme"
Subtree = "https://github.com/exonware/xwdata.git"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "0.9.0.4"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short -x --strict-markers"
markers = [
  "xwdata_core: Core functionality tests",
  "xwdata_integration: Integration tests",
  "xwdata_performance: Performance tests",
]

[tool.hatch.version]
path = "src/exonware/xwdata/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/exonware"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/.github"]
