# Source size (src/*): ~514.7 KB
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exonware-xwdata"
dynamic = ["version"]
description = "Advanced data manipulation with XWNode integration, async operations, and universal format conversion"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["data", "manipulation", "processing", "transformation", "analysis", "exonware"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "exonware-xwsystem==0.9.0.43",
  "exonware-xwnode==0.9.0.26",
  "exonware-xwquery==0.9.0.16",
  "exonware-xwjson==0.9.0.24",
]
authors = [
  { name = "eXonware Backend Team", email = "connect@exonware.com" },
]

[project.license]
text = "Apache-2.0"

[project.optional-dependencies]
# First-party XW libs composed by this package (excludes exonware-xwsystem==0.9.0.37; see lazy/full).
xw = [
  "exonware-xwjson==0.9.0.24",
  "exonware-xwnode==0.9.0.26",
  "exonware-xwquery==0.9.0.16",
]
lazy = [
  "exonware-xwdata[xw]==0.9.0.18",
  "exonware-xwlazy==1.0.1.82",
  "exonware-xwsystem[lazy]==0.9.0.43",
  "exonware-xwjson[xw]==0.9.0.24",
  "exonware-xwnode[xw]==0.9.0.26",
  "exonware-xwquery[xw]==0.9.0.16",
]
full = [
  "exonware-xwdata[xw]==0.9.0.18",
  "exonware-xwsystem[full]==0.9.0.43",
  "exonware-xwformats[full]==0.9.0.34",
  "exonware-xwjson[xw]==0.9.0.24",
  "exonware-xwnode[xw]==0.9.0.26",
  "exonware-xwquery[xw]==0.9.0.16",
  "json5>=0.9.0",
  "PyYAML>=6.0",
  "toml>=0.10.2",
]
dev = [
  "exonware-xwdata[full]==0.9.0.18",
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://exonware.com"
Repository = "https://github.com/exonware/xwdata"
Documentation = "https://github.com/exonware/xwdata#readme"
Subtree = "https://github.com/exonware/xwdata.git"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.hatch.version]
path = "src/exonware/xwdata/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/exonware"]
py-modules = ["src/xwdata", "src/xdata"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/.github"]
